# lenovo-magicbay-hud

./: .gitignore  Cargo.toml  README.md  build.rs  hud.cmd
src/: app.rs  main.rs  sensors.rs  theme.rs  ui.rs  window.rs
