[package]
name = "magicbay-hud"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.45"
cpu-temp = "0.1.0"
eframe = { version = "0.34.3", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.34.3"
egui_plot = "0.35.0"
nvml-wrapper = "0.12.1"
sysinfo = "0.39.3"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_Graphics_Dwm", "Win32_Graphics_Gdi", "Win32_Storage_FileSystem", "Win32_System_Console", "Win32_System_Power", "Win32_UI_HiDpi", "Win32_UI_WindowsAndMessaging"] }

[build-dependencies]
winres = "0.1"
